examples/01-web-hosting/common-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: common-ingress
  namespace: common-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - neoteroi.xyz
        - www.neoteroi.xyz
      secretName: neoteroi-xyz-tls
  rules:
    - host: neoteroi.xyz
      http:
        paths:
          - path: /orange
            pathType: Prefix
            backend:
              service:
                name: orange-app
                port:
                  number: 80
          - path: /teal
            pathType: Prefix
            backend:
              service:
                name: teal-app
                port:
                  number: 80
    - host: www.neoteroi.xyz
      http:
        paths:
          - path: /orange
            pathType: Prefix
            backend:
              service:
                name: orange-app
                port:
                  number: 80
          - path: /teal
            pathType: Prefix
            backend:
              service:
                name: teal-app
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: orange-app
  namespace: common-ingress
spec:
  type: ExternalName
  externalName: orange-app.orange.svc.cluster.local
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: teal-app
  namespace: common-ingress
spec:
  type: ExternalName
  externalName: teal-app.teal.svc.cluster.local
  ports:
    - port: 80
      targetPort: 80
